--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,4 +26,7 @@ workflows:
       - say-hello:
           filters:
             tags:
-              only: /^nightly-release-\d+\.\d+\.\d+$/
+              only: # x.y.z
+                - /^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)$/
+            branches:
+              ignore: /.*/
