--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,10 +23,4 @@ jobs:
 workflows:
   say-hello-workflow:
     jobs:
-      - say-hello:
-          filters:
-            tags:
-              only: # x.y.z
-                - /^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)$/
-            branches:
-              ignore: /.*/
+      - say-hello
